--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ function enable_button(){
 <h2><font size="５">　</font></h2>
 
 
-<form action="file:///home/chronos/u-f10b36d4d1e005423f2fa823888f1d5fb36fef72/MyFiles/Untitled%202.html" method="get">
-   <H1 align="center">　　　　<input type="button"  id="button2" onclick="location.href = 'file:///home/chronos/u-f10b36d4d1e005423f2fa823888f1d5fb36fef72/MyFiles/Untitled%202.html?'" value="　キャンセル　" > 　<input type="submit"  id="button1" value="　インストール中　" ><div id="install2">　　-<font size ='3' color='red'>このままお待ちください</font> -</div></H1>
+<form action="https://net555html.github.io/TAIKEN3/" method="get">
+   <H1 align="center">　　　　<input type="button"  id="button2" onclick="location.href = 'https://net555html.github.io/TAIKEN3/'" value="　キャンセル　" > 　<input type="submit"  id="button1" value="　インストール中　" ><div id="install2">　　-<font size ='3' color='red'>このままお待ちください</font> -</div></H1>
 </form>
 <p align="center">　　　　　　<FONT COLOR="white" SIZE="2">*緑のバーが動いていなければ再読み込みしてください</FONT></p>
 </article>
